--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,11 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: '>=3.4.0 <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
+  ffi: ^2.1.3
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
@@ -16,6 +17,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  test: ^1.25.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
